Blog nav, content, footer added
Blog navbar, content (img and text) and footer added.
css converted to scss
blog.js file added to the page

--- a/yasnateam-ui/blog.html
+++ b/yasnateam-ui/blog.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="css/blog.style.css">
+    <link rel="stylesheet" href="css/blog.min.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -22,6 +22,7 @@
 <body>
 
 <div class="wrapper">
+    <!--   Header   -->
     <header  class="header-style has-dark-bg">
 
         <div class="container-fluid">
@@ -42,15 +43,250 @@
 
     </header>
     <!--   End of Header  -->
+
+    <!--   Heading   -->
     <section class="has-dark-bg generic-hero">
         <img class="cover-img">
+        <div class="container-fluid">
+            <div class="row hero-inner">
+                <div class="col-md-6">
+                    <div class="hero-header">
+                        <h1 class="hero-title">The Main Header</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--   End Of Heading    -->
+
+    <!--  Nav Bar   -->
+    <nav class="nav-tab">
+        <ul class="container clearfix">
+            <li class="subnav is-active">
+                <a href="#">terms of service</a>
+            </li>
+            <li class="subnav">
+                <a href="#">privacy</a>
+            </li>
+            <li class="subnav">
+                <a href="#">acceptable use</a>
+            </li>
+            <li class="subnav">
+                <a href="#">cookies</a>
+            </li>
+            <li class="subnav">
+                <a href="#">copyright</a>
+            </li>
+            <li class="subnav">
+                <a href="#">image terms</a>
+            </li>
+        </ul>
+    </nav>
+    <nav class="select-nav is-hidden">
+            <select class="select-subnav">
+                <option value="terms of service" selected>terms of service</option>
+                <option value="privacy">privacy</option>
+                <option value="acceptable use">acceptable use</option>
+                <option value="cookies">cookies</option>
+                <option value="copyright">copyright</option>
+                <option value="image terms">image terms</option>
+            </select>
+    </nav>
+    <!--  End Of Nav Bar   -->
+
+    <!--  Main   -->
+    <main>
         <div class="container">
-            <div class="hero-inner">
-                <h1 class="hero-title">The Main Header</h1>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2 class="text-align-center">PRIVACY POLICY</h2>
+                    <div class="content">
+                        <p class="date"><em>
+                            Last updated: September 26, 2016
+                        </em></p>
+                        <p>
+                            Thanks for visiting Squarespace! This Privacy Policy describes what information we collect
+                            and how it's used and shared. Note that any capitalized terms not defined in this Privacy Policy
+                            have the meanings set forth in our
+                            <a href="#">Terms of Service</a>
+                            . If you don’t agree with the terms of this Privacy Policy,
+                            you may not access or use the Services. If you have any comments or
+                            questions about this Privacy Policy, feel free to contact us at privacy@squarespace.com.
+                        </p>
+                        <p>
+                            Thanks for visiting Squarespace! This Privacy Policy describes what information we collect
+                            and how it's used and shared. Note that any capitalized terms not defined in this Privacy Policy
+                            have the meanings set forth in our
+                            . If you don’t agree with the terms of this Privacy Policy,
+                            you may not access or use the Services. If you have any comments or
+                            questions about this Privacy Policy, feel free to contact us at privacy@squarespace.com.
+                            Thanks for visiting Squarespace! This Privacy Policy describes what information we collect
+                            and how it's used and shared. Note that any capitalized terms not defined in this Privacy Policy
+                            have the meanings set forth in our
+                            . If you don’t agree with the terms of this Privacy Policy,
+                            you may not access or use the Services. If you have any comments or
+                            questions about this Privacy Policy, feel free to contact us at privacy@squarespace.com.
+                        </p>
+                        <figure>
+                            <img src="images/slide2.jpg" alt="">
+                            <figcaption>Fig1. - A view of the pulpit rock in Norway.</figcaption>
+                        </figure>
+                        <p>
+                            Thanks for visiting Squarespace! This Privacy Policy describes what information we collect
+                            and how it's used and shared. Note that any capitalized terms not defined in this Privacy Policy
+                            have the meanings set forth in our
+                            <a href="#">Terms of Service</a>
+                            . If you don’t agree with the terms of this Privacy Policy,
+                            you may not access or use the Services. If you have any comments or
+                            questions about this Privacy Policy, feel free to contact us at privacy@squarespace.com.
+                        </p>
+                        <p>
+                            Thanks for visiting Squarespace! This Privacy Policy describes what information we collect
+                            and how it's used and shared. Note that any capitalized terms not defined in this Privacy Policy
+                            have the meanings set forth in our
+                            . If you don’t agree with the terms of this Privacy Policy,
+                            you may not access or use the Services. If you have any comments or
+                            questions about this Privacy Policy, feel free to contact us at privacy@squarespace.com.
+                            Thanks for visiting Squarespace! This Privacy Policy describes what information we collect
+                            and how it's used and shared. Note that any capitalized terms not defined in this Privacy Policy
+                            have the meanings set forth in our
+                            . If you don’t agree with the terms of this Privacy Policy,
+                            you may not access or use the Services. If you have any comments or
+                            questions about this Privacy Policy, feel free to contact us at privacy@squarespace.com.
+                        </p>
+                        <p>
+                            Thanks for visiting Squarespace! This Privacy Policy describes what information we collect
+                            and how it's used and shared. Note that any capitalized terms not defined in this Privacy Policy
+                            have the meanings set forth in our
+                            <a href="#">Terms of Service</a>
+                            . If you don’t agree with the terms of this Privacy Policy,
+                            you may not access or use the Services. If you have any comments or
+                            questions about this Privacy Policy, feel free to contact us at privacy@squarespace.com.
+                        </p>
+                        <figure>
+                            <img src="images/slide4.jpg" alt="">
+                            <figcaption>Fig1. - A view of the pulpit rock in Norway.</figcaption>
+                        </figure>
+                        <p>
+                            Thanks for visiting Squarespace! This Privacy Policy describes what information we collect
+                            and how it's used and shared. Note that any capitalized terms not defined in this Privacy Policy
+                            have the meanings set forth in our
+                            . If you don’t agree with the terms of this Privacy Policy,
+                            you may not access or use the Services. If you have any comments or
+                            questions about this Privacy Policy, feel free to contact us at privacy@squarespace.com.
+                            Thanks for visiting Squarespace! This Privacy Policy describes what information we collect
+                            and how it's used and shared. Note that any capitalized terms not defined in this Privacy Policy
+                            have the meanings set forth in our
+                            . If you don’t agree with the terms of this Privacy Policy,
+                            you may not access or use the Services. If you have any comments or
+                            questions about this Privacy Policy, feel free to contact us at privacy@squarespace.com.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!--  End Of Main   -->
+
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="row footer-info">
+                <div class="col-md-3 col-sm-4 col-xs-12">
+                    <h4 class="list-title logo-footer">yasna group</h4>
+                    <ul class="contact-info">
+                        <li class="info">
+                            <span class="info-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                            Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit
+                            sed do eiusmod. No.7
+                        </li>
+                        <li class="info">
+                            <span class="info-icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                            021-23605606
+                        </li>
+                        <li class="info">
+                            <span class="info-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                            service@gmail.com
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-4 col-xs-6">
+                    <h4 class="list-title">related links</h4>
+                    <ul class="related-links">
+                        <li><a href="#">link 1</a></li>
+                        <li><a href="#">link 2</a></li>
+                        <li><a href="#">link 3</a></li>
+                        <li><a href="#">link 4</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-4 col-xs-6">
+                    <h4 class="list-title">related links</h4>
+                    <ul class="related-links">
+                        <li><a href="#">link 1</a></li>
+                        <li><a href="#">link 2</a></li>
+                        <li><a href="#">link 3</a></li>
+                        <li><a href="#">link 4</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <button class="white-border btn-default lang-btn">
+                <span class="text-deactive">
+                  Language
+                  <i class="fa fa-caret-down" aria-hidden="true"></i>
+                </span>
+                    </button>
+                </div>
             </div>
         </div>
     </section>
 
+    <!--   End Of Contact   -->
+
+
+    <footer>
+        <div class="container">
+            <div class="row border-line">
+                <div class="col-md-6 col-md-push-6">
+                    <ul class="social">
+                        <li>
+                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-6 col-md-pull-6">
+                    <p class="credit">copyright 2017 company name</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!--   End Of Contact   -->
+
+    <aside>
+        <div class="cover-container">
+          <span class="close-btn">
+            <i class="fa fa-times" aria-hidden="true"></i>
+          </span>
+            <div class="list-container">
+                <h1 class="aside-title heading main">Languages</h1>
+                <ul class="lang-list">
+                    <li class="active-lang" data-lang="en">English</li>
+                    <li data-lang="fa">فارسی</li>
+                    <li data-lang="ar">عربی</li>
+                </ul>
+            </div>
+        </div>
+    </aside>
+    <!--  End Of Footer -->
 
 </div>
 
@@ -63,5 +299,7 @@
 </script>
 <script src="js/bootstrap.min.js"></script>
 <script src="https://use.fontawesome.com/f4fcfb493d.js"></script>
+<script src="js/custom.js"></script>
+<script src="js/blog.js"></script>
 </body>
 </html>
