--- a/yasnateam-ui/index.html
+++ b/yasnateam-ui/index.html
@@ -29,7 +29,7 @@
     
     <div class="wrapper">
       
-      <header  class="header-style">
+      <header  id="fixed-header" class="header-style">
 
         <div class="container-fluid">
           <div class="header-content">
