Sharing Posts feature added
Sharings feature on each blog post is available using AddToAny pluging.

--- a/yasnateam-ui/blog-post.html
+++ b/yasnateam-ui/blog-post.html
@@ -181,7 +181,29 @@
                             you may not access or use the Services. If you have any comments or
                             questions about this Privacy Policy, feel free to contact us at privacy@squarespace.com.
                         </p>
+
+                        <div class="share-post">
+                            <!-- AddToAny BEGIN -->
+                            <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                                <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+                                <a class="a2a_button_facebook"></a>
+                                <a class="a2a_button_twitter"></a>
+                                <a class="a2a_button_copy_link"></a>
+                                <a class="a2a_button_telegram"></a>
+                            </div>
+                            <script>
+                                var a2a_config = a2a_config || {};
+                                a2a_config.icon_color = "transparent,#000"
+                                a2a_config.color_main = "dddddd";
+                                a2a_config.color_border = "dddddd";
+                                a2a_config.color_link_text = "333333";
+                                a2a_config.color_link_text_hover = "333333";
+                            </script>
+                            <script async src="https://static.addtoany.com/menu/page.js"></script>
+                            <!-- AddToAny END -->
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
