--- a/yasnateam-ui/index-farsi.html
+++ b/yasnateam-ui/index-farsi.html
@@ -9,13 +9,14 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.rtl.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="owlcarousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="owlcarousel/dist/assets/owl.theme.default.min.css">
     <link rel="stylesheet" type="text/css" href="css/slider-style.css">
     <link rel="stylesheet" type="text/css" href="css/btn-style.css">
-    <link rel="stylesheet" href="css/Typography.css">
+    <link rel="stylesheet" href="css/typography.css">
     
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
