emad-ui index animation
header deleted from index page
nav relocated under the line
animations effect added

--- a/emad-ui/index.html
+++ b/emad-ui/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Header -->
-    <header class="header">
+   <!-- <header class="header">
        <div class="inner-header">
            <div class="logo">
                <a href="#">Mohammad Hossein Emad</a>
@@ -50,7 +50,7 @@
                </ul>
            </nav>
        </div>
-    </header>
+    </header>-->
     <!-- End Of Header -->
 
     <!-- Main Section -->
@@ -58,14 +58,14 @@
         <div class="header-container">
             <div class="inner-container">
                 <h1 class="title-big">Mohammad Hossein Emad</h1>
+                <div class="line-container">
+                    <div class="load-line"></div>
+                </div>
                 <nav class="nav-center">
                     <a href="#">About</a>
                     <a href="#">Works</a>
                     <a href="#">Contact</a>
                 </nav>
-                <div class="line-container">
-                    <div class="load-line"></div>
-                </div>
             </div>
         </div>
     </main>
