Minor changes in typography
(index page navbar not responsible for width < 375px)
new items added to the navbar
font weight reduced for titles.
some helper classes added

--- a/emad-ui/blog.html
+++ b/emad-ui/blog.html
@@ -25,10 +25,16 @@
             <nav class="nav-bar">
                 <ul>
                     <li class="menu-item">
-                        <a href="#">About</a>
+                        <a href="#">Biography</a>
                     </li>
                     <li class="menu-item">
                         <a href="#">works</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">article</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">news</a>
                     </li>
                     <li class="menu-item">
                         <a href="#">contact</a>
@@ -43,10 +49,16 @@
             <nav class="nav-list mobile">
                 <ul>
                     <li class="menu-item">
-                        <a href="#">About</a>
+                        <a href="#">Biography</a>
                     </li>
                     <li class="menu-item">
                         <a href="#">works</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">article</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">news</a>
                     </li>
                     <li class="menu-item">
                         <a href="#">contact</a>
