--- a/emad-ui/index.html
+++ b/emad-ui/index.html
@@ -58,13 +58,15 @@
     <main>
         <div class="header-container">
             <div class="inner-container">
-                <h1 class="title-big">Mohammad Hossein Emad</h1>
+                <h1 class="title-big vwfont">Mohammad Hossein Emad</h1>
                 <div class="line-container">
                     <div class="load-line"></div>
                 </div>
                 <nav class="nav-center">
-                    <a href="#">About</a>
+                    <a href="#">biography</a>
                     <a href="#">Works</a>
+                    <a href="#">article</a>
+                    <a href="#">news</a>
                     <a href="#">Contact</a>
                 </nav>
             </div>
