emad-ui spinner and cloud view for years
spinner view for years works
cloud view has a random changing class
*yasna-ui: language page, active class changes on click.

--- a/emad-ui/appendix-spinner.html
+++ b/emad-ui/appendix-spinner.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blog</title>
+    <title>Blog (spinner)</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="owlcarousel/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="owlcarousel/dist/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/appendix-style.min.css">
 </head>
 <body>
 
+<!-- @TODO Only one of these pages should remain in project-->
 <div class="wrapper">
     <!-- Header -->
      <header class="header">
@@ -67,56 +71,9 @@
      </header>
     <!-- End Of Header -->
 
-    <!--years clouds-->
-  <section class="appendix">
-      <div class="container">
-          <div class="year-container">
-              <h1 class="main-title">Works</h1>
-              <div class="years">
-                  <div class="year">
-                      <a href="#">2017-2015</a>
-                      <span>.</span>
-                  </div>
-                  <div class="year">
-                      <a href="#">2015-2013</a>
-                      <span>.</span>
-                  </div>
-                  <div class="year">
-                      <a href="#">2013-2011</a>
-                      <span>.</span>
-                  </div>
-                  <div class="year">
-                      <a href="#">2011-2009</a>
-                      <span>.</span>
-                  </div>
-                  <div class="year">
-                      <a href="#">2009-2007</a>
-                      <span>.</span>
-                  </div>
-                  <div class="year">
-                      <a href="#">2007-2005</a>
-                      <span>.</span>
-                  </div>
-                  <div class="year">
-                      <a href="#">2005-2003</a>
-                      <span>.</span>
-                  </div>
-                  <div class="year">
-                      <a href="#">2003-2001</a>
-                      <span>.</span>
-                  </div>
-                  <div class="year blink">
-                      <a href="#">2001-1999</a>
-                      <span>.</span>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
-    <!--End Of years clouds-->
 
     <!-- Years Scroll View -->
-   <!-- <section class="appendix">
+    <section class="appendix">
         <div class="container">
             <div class="year-container">
                 <h1 class="main-title">Works</h1>
@@ -154,7 +111,7 @@
                 </div>
             </div>
         </div>
-    </section>-->
+    </section>
     <!-- End Of Years Scroll View -->
 
 
@@ -167,6 +124,9 @@
     window.jQuery || document.write('<script src="js/jquery-3.2.1.min.js">\x3C/script>')
 </script>
 <script src="js/bootstrap.min.js"></script>
+<script src="owlcarousel/dist/owl.carousel.min.js"></script>
+<script src="js/jquery.mousewheel.min.js"></script>
 <script src="js/custom.js"></script>
+<script src="js/spinner.js"></script>
 </body>
 </html>
