--- a/yasnateam-ui/index-farsi.html
+++ b/yasnateam-ui/index-farsi.html
@@ -546,8 +546,8 @@
           <div class="list-container">
             <h1 class="aside-title heading main">Languages</h1>
             <ul class="lang-list">
-              <li class="active-lang" data-lang="en">English</li>
-              <li data-lang="fa">فارسی</li>
+              <li data-lang="en">English</li>
+              <li class="active-lang" data-lang="fa">فارسی</li>
               <li data-lang="ar">عربی</li>
             </ul>
           </div>
