slider func relocated to new file
slider related functions relocated to a new js file.

--- a/emad-ui/blog.html
+++ b/emad-ui/blog.html
@@ -185,5 +185,6 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="owlcarousel/dist/owl.carousel.min.js"></script>
 <script src="js/custom.js"></script>
+<script src="js/slider.js"></script>
 </body>
 </html>
