ehda-ui added to git
ehda-ui main page created.
yasna-ui bugs fixed

--- a/yasnateam-ui/index-farsi.html
+++ b/yasnateam-ui/index-farsi.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="owlcarousel/dist/assets/owl.theme.default.min.css">
     <link rel="stylesheet" type="text/css" href="css/slider-style.css">
     <link rel="stylesheet" type="text/css" href="css/btn-style.css">
-    <link rel="stylesheet" href="css/typography.css">
+    <link rel="stylesheet" href="css/typography.rtl.css">
     
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
