--- a/ehda-summer-ui/index.html
+++ b/ehda-summer-ui/index.html
@@ -9,8 +9,20 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css">
+    <link media="all" type="text/css" rel="stylesheet" href="css/fontiran.css">
+    <link href="css/TimeCircles.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="https://ehda.center/old/public/assets/site/events/fontiran.css">
+
+    <style>
+        .main{
+            background: url("images/summer-hand.png"), url("images/summer.jpg");
+            background-position: right bottom,center;
+            background-repeat: no-repeat, no-repeat;
+            background-size: 20% auto, cover;
+            background-attachment:fixed, scroll;
+        }
+
+    </style>
 </head>
 <body>
 <div class="wrapper">
@@ -23,26 +35,118 @@
         </div>
     </header>
     <!--end header-->
-<!--main-->
-    <main>
-         <div class="color-offset">
-             <div class="container-fluid main-container">
-                 <div class="row">
-                     <div class="col-md-10 col-md-offset-1">
-                        <div class="content">
-                            <div class="inner-content">
-                                <h2 class="color-title">
+
+    <!--main-->
+    <div class="main">
+        <div class="color-offset"></div>
+        <div class="container main-container">
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="content">
+                        <div class="inner-content">
+                            <h2 class="color-title">
                                     کمپین (پويش مردمی) هرفصل ۳۰۰ هزار كارت اهـدای عضو
                                 </h2>
+                            <p class="center ltr">
+                                    <a href="https://telegram.me/Ehdayeozv_bot" class="telegram-link" target="_blank">@Ehdayeozv_bot</a>
+                                </p>
+                            <h3 class="headline shutter-slide">
+                                    <div class="word-wrapper">
+                                        <span class="shutter">
+                                            <b class="">ثبت حماسه&zwnj;ای دیگر از نوع&zwnj;دوستی ایرانیان در فصل تابستان</b>
+                                            <b class="">هر ایرانی یک سفیر اهدای عضو</b>
+                                            <b class="">تست تست تست تست تست تست تست</b>
+                                        </span>
+                                    </div>
+                                </h3>
+                            <div class="container-fluid">
+                                <div class="timer countdown-time bounceIn" data-date="2017-09-22 23:59:59" data-timer="1000">
+
+                                </div>
+                            </div>
+                            <div class="count-wrapper">
+                                <h2>
+                                    تا کنون
+                                    <strong class="s_counter" style=" color: #5A9B20;">25,253</strong>
+                                    نفر در این کمپین شرکت کرده اند.
+                                </h2>
+                            </div>
+                            <div class="btn-wrapper">
+                                <a href="https://telegram.me/Ehdayeozv_bot" class="btn btn-lg btn-subscribe btn-custom" role="button">ثبت نام از طریق بات تلگرام</a>
                             </div>
                         </div>
-                     </div>
-                 </div>
-             </div>
-         </div>
-    </main>
-<!-- end main -->
+                    </div>
+                    <!--footer-->
+                    <footer>
+                        <nav class="footbar">
+                            <ul class="socials">
+                                <li>
+                                    <a href="" class="social-link facebook">
+                                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-link telegram">
+                                        <i class="fa fa-telegram" aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-link instagram">
+                                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-link site">
+                                        <i class="fa fa-sitemap" aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <p class="copyright">
+
+                            حقوق مادی و معنوی این سایت برای
+                            <a href="https://ehda.center" target="_blank">انجمن اهدای عضو ایرانیان</a>
+
+                            محفوظ است.
+                            <br/>
+                            <a href="https://yasnateam.com" target="_blank" style="font-size: 10px; color: #9AACC1;">طراحی و اجرا: گروه یسنا</a>
+                        </p>
+                    </footer>
+                    <!--end footer-->
+                </div>
+            </div>
+        </div>
+        <nav class="sidebar">
+            <ul class="socials">
+                <li>
+                    <a href="" class="social-link facebook">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="social-link telegram">
+                        <i class="fa fa-telegram" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="social-link instagram">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="social-link site">
+                       <i class="fa fa-sitemap" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <!-- end main -->
+
+
+
 </div>
+<!--end of wrapper-->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
@@ -52,5 +156,7 @@
 </script>
 <script src="js/bootstrap.min.js"></script>
 <script src="https://use.fontawesome.com/f4fcfb493d.js"></script>
+<script type="text/javascript" src="js/TimeCircles.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>
