--- a/ehda-summer-ui/index.html
+++ b/ehda-summer-ui/index.html
@@ -29,9 +29,9 @@
    <!--header-->
     <header>
         <div class="container-fluid">
-            <div class="title-container">
-                <h1>انجمن اهدای عضو ایران</h1>
-            </div>
+            <a class="title-container" href="https://ehda.center">
+                <img src="https://ehda.center/uploads/posts/gallery/image/1503245522_M4PSsReOLsElg7A7X8TP95luaFEE92_original.png" alt="" class="header-logo">
+            </a>
         </div>
     </header>
     <!--end header-->
