--- a/payment/index.html
+++ b/payment/index.html
@@ -29,15 +29,58 @@
     <header class="header">
         <div class="container">
             <div class="row">
+                <!-- Site Logo -->
                 <div class="header__logo pull-left">
                     <a href="#" class="header__logo--link">
-                        <img src="" alt="">
+                        <img src="public/assets/images/logo.svg" alt="">
                     </a>
                 </div>
+                <!-- !END Site Logo -->
+
+                <!-- Site Nav -->
+                <nav class="nav pull-right js-hamburger-nav">
+                    <ul class="nav-list list-inline">
+
+                        <li class="nav-list__item">
+                            <a href="#home">خانه</a>
+                        </li>
+                        <li class="nav-list__item">
+                            <a href="#home">خدمات</a>
+                        </li>
+                        <li class="nav-list__item">
+                            <a href="#home">وبلاگ</a>
+                        </li>
+                        <li class="nav-list__item">
+                            <a href="#home">اخبار</a>
+                        </li>
+                        <li class="nav-list__item">
+                            <a href="#home">درباره ما</a>
+                        </li>
+                        <li class="nav-list__item">
+                            <a href="#home">تماس با ما</a>
+                        </li>
+                        <li class="nav-list__item">
+                            <a class="btn" href="#home">ورود</a>
+                        </li>
+                        <li class="nav-list__item">
+                            <a class="btn btn-primary" href="#home">عضویت</a>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- !END Site Nav -->
+
             </div>
         </div>
     </header>
     <!-- !END Header -->
+
+    <!-- Banner section -->
+    <section class="banner">
+        <header class="banner__header">
+
+        </header>
+    </section>
+    <!-- !END Banner section -->
 </div>
 <!-- !END Site Wrapper -->
 
