--- a/payment/index.html
+++ b/payment/index.html
@@ -12,6 +12,11 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="public/assets/css/fontiran.css">
+    <link rel="stylesheet" href="public/assets/libs/fontawesome/css/font-awesome.min.css">
+
+    <!-- Owl Carousel -->
+    <link rel="stylesheet" href="public/assets/libs/owlcarousel/owl.carousel.css">
+    <link rel="stylesheet" href="public/assets/libs/owlcarousel/owl.theme.default.css">
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="public/assets/css/screen.min.css">
@@ -28,7 +33,6 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <div class="row">
                 <!-- Site Logo -->
                 <div class="header__logo pull-left">
                     <a href="#" class="header__logo--link">
@@ -63,21 +67,78 @@
                             <a class="btn" href="#home">ورود</a>
                         </li>
                         <li class="nav-list__item">
-                            <a class="btn btn-primary" href="#home">عضویت</a>
+                            <a class="btn primary" href="#home">عضویت</a>
                         </li>
                     </ul>
                 </nav>
                 <!-- !END Site Nav -->
 
+
             </div>
-        </div>
     </header>
     <!-- !END Header -->
 
     <!-- Banner section -->
     <section class="banner">
         <header class="banner__header">
+            <div class="banner__header--slider">
+                <div class="slider-container owl-carousel" id="header-slider">
+                    <!-- Center Text only-->
+                    <div class="slider__item center">
+                        <div class="slider__item--inner">
+                            <div class="slider__item--content">
+                                <h1>برای نجات زندگی لحظه‌ها مهم است!</h1>
+                                <p>برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است.</p>
+                                <a href="#" class="btn primary large clear">شروع</a>
+                                <a href="#" class="btn primary large">ثبت نام</a>
+                            </div>
+                        </div>
+                    </div>
 
+                    <!-- left image -->
+                    <div class="slider__item image-left">
+                        <div class="slider__item--inner">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-5 col-md-push-7">
+                                        <img class="slide-image" src="public/assets/images/icon-web-dev_F1OpwKr.png" alt="logo">
+                                    </div>
+                                    <div class="col-md-7 col-md-pull-5">
+                                        <div class="slider__item--content">
+                                            <h1>برای نجات زندگی لحظه‌ها مهم است!</h1>
+                                            <p>برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است.</p>
+                                            <a href="#" class="btn primary large clear">شروع</a>
+                                            <a href="#" class="btn primary large">ثبت نام</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- right image -->
+                    <div class="slider__item image-left">
+                        <div class="slider__item--inner">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-5">
+                                        <img class="slide-image" src="public/assets/images/icon-web-dev_F1OpwKr.png" alt="logo">
+                                    </div>
+                                    <div class="col-md-7">
+                                        <div class="slider__item--content">
+                                            <h1>برای نجات زندگی لحظه‌ها مهم است!</h1>
+                                            <p>برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است.</p>
+                                            <a href="#" class="btn primary large clear">شروع</a>
+                                            <a href="#" class="btn primary large">ثبت نام</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </header>
     </section>
     <!-- !END Banner section -->
@@ -92,7 +153,11 @@
 <script src="public/assets/libs/jquery/jquery.min.js"></script>
 <!-- Bootstrap js -->
 <script src="public/assets/libs/bootstrap/js/bootstrap.min.js"></script>
-<!-- !END End-body Scripts -->
+<!-- Owl Carousel -->
+<script src="public/assets/libs/owlcarousel/owl.carousel.min.js"></script>
 
+<!-- Custom js -->
+<script src="public/assets/js/general.js"></script>
+<!-- !END End-body Scripts -->
 </body>
 </html>
