--- a/payment/index.html
+++ b/payment/index.html
@@ -63,11 +63,18 @@
                         <li class="nav-list__item">
                             <a href="#home">تماس با ما</a>
                         </li>
+                    </ul>
+                    <ul class="btn-list list-inline">
                         <li class="nav-list__item">
                             <a class="btn" href="#home">ورود</a>
                         </li>
                         <li class="nav-list__item">
                             <a class="btn primary" href="#home">عضویت</a>
+                        </li>
+                        <li class="nav-list__item">
+                            <a href="#" class="btn primary hamburger">
+                                <i class="fa fa-bars" aria-hidden="true"></i>
+                            </a>
                         </li>
                     </ul>
                 </nav>
@@ -80,17 +87,26 @@
 
     <!-- Banner section -->
     <section class="banner">
+        <div class="banner-background">
+            <img src="public/assets/images/wave.svg" alt="">
+        </div>
         <header class="banner__header">
             <div class="banner__header--slider">
                 <div class="slider-container owl-carousel" id="header-slider">
                     <!-- Center Text only-->
                     <div class="slider__item center">
                         <div class="slider__item--inner">
-                            <div class="slider__item--content">
-                                <h1>برای نجات زندگی لحظه‌ها مهم است!</h1>
-                                <p>برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است.</p>
-                                <a href="#" class="btn primary large clear">شروع</a>
-                                <a href="#" class="btn primary large">ثبت نام</a>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="slider__item--content">
+                                            <h1>برای نجات زندگی لحظه‌ها مهم است!</h1>
+                                            <p>برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است. برای نجات زندگی لحظه‌ها مهم است.</p>
+                                            <a href="#" class="btn primary large clear">شروع</a>
+                                            <a href="#" class="btn primary large">ثبت نام</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -142,6 +158,278 @@
         </header>
     </section>
     <!-- !END Banner section -->
+
+    <!-- Calculator -->
+    <section class="calculator">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 col-sm-12">
+                    <h1>
+                        <i class="fa fa-calculator" aria-hidden="true"></i>
+                        محاسبه قیمت
+                    </h1>
+                </div>
+                <form action="">
+                    <div class="col-md-2 col-xs-6 xs550">
+                        <div class="form-group">
+                            <select name="" id="" class="form-control">
+                                <option value="">انتخاب خدمات ...</option>
+                                <option value="">paypal</option>
+                                <option value="">master card</option>
+                                <option value="">Visa Card</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-xs-6 xs550">
+                        <div class="form-group">
+                            <div class="selecttype">
+                                <div class="input-group">
+                                    <span class="radio--custom">
+                                        <input id="radio1" type="radio" name="unit" class="">
+                                        <label for="radio1">
+                                            <i class="fa fa-gbp" aria-hidden="true"></i>
+                                        </label>
+                                    </span>
+                                    <span class="radio--custom">
+                                        <input id="radio2" type="radio" name="unit" class="">
+                                        <label for="radio2">
+                                            <i class="fa fa-eur" aria-hidden="true"></i>
+                                        </label>
+                                    </span>
+                                    <span class="radio--custom">
+                                        <input id="radio3" type="radio" name="unit" class="">
+                                        <label for="radio3">
+                                            <i class="fa fa-usd" aria-hidden="true"></i>
+                                        </label>
+                                    </span>
+                                    <input class="form-control pull-right" type="text" placeholder="مبلغ">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-xs-6 xs550">
+                        <div class="form-group">
+                            <div class="result">
+                                هزینه:
+                                <span>0</span>
+                                تومان
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-xs-6 xs550">
+                        <div class="form-group">
+                            <a class="btn btn-success calculator--btn">ثبت سفارش</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- !END Calculator -->
+
+    <!-- Services Slider -->
+    <section class="services">
+        <nav class="services-nav">
+            <ul class="list-inline logos-row">
+                <li class="logos-row__item">
+                    <a href="#one">
+                        <div class="logos-row__item--logo">
+                            <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+                        </div>
+                        <p class="logos-row__item--name">محصول اول</p>
+                    </a>
+                </li>
+                <li class="logos-row__item">
+                    <a href="#two">
+                        <div class="logos-row__item--logo">
+                            <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+                        </div>
+                        <p class="logos-row__item--name">محصول اول</p>
+                    </a>
+                </li>
+                <li class="logos-row__item">
+                    <a href="#three">
+                        <div class="logos-row__item--logo">
+                            <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+                        </div>
+                        <p class="logos-row__item--name">محصول اول</p>
+                    </a>
+                </li>
+                <li class="logos-row__item">
+                    <a href="#four">
+                        <div class="logos-row__item--logo">
+                            <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+                        </div>
+                        <p class="logos-row__item--name">محصول اول</p>
+                    </a>
+                </li>
+                <li class="logos-row__item">
+                    <a href="#five">
+                        <div class="logos-row__item--logo">
+                            <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+                        </div>
+                        <p class="logos-row__item--name">محصول اول</p>
+                    </a>
+                </li>
+                <li class="logos-row__item">
+                    <a href="#six">
+                        <div class="logos-row__item--logo">
+                            <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+                        </div>
+                        <p class="logos-row__item--name">محصول اول</p>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="services-body owl-carousel" id="service-slider">
+            <div class="service__slide simple" data-hash="one">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="services__slide--header">ارائه انواع خدمات ارزی</h1>
+                        <div class="col-md-8 col-sm-9">
+                            <div class="content">
+                                <p>
+                                    طراح، معمار، عکاس و یا دارای حرفه خاصی هستید که با
+                                    مشتریان خارج از کشور همکاری دارید؟
+                                    درامد اینترنتی خود را به ریال نقد کنید.
+                                </p>
+                                <a href="#" class="btn"></a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-3">
+                            <img src="public/assets/images/icon-service.png" alt="service">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service__slide content-box" data-hash="two">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="service__card card">
+                                <div class="card__image">
+                                    <img src="public/assets/images/icon-service.png" alt="" height="150" width="208">
+                                </div>
+                                <a href="#" class="btn large secondary">ثبت نام تافل</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="service__card card">
+                                <div class="card__image">
+                                    <img src="public/assets/images/icon-service.png" alt="" height="150" width="208">
+                                </div>
+                                <a href="#" class="btn large secondary">ثبت نام آیلتس</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="service__card card">
+                                <div class="card__image">
+                                    <img src="public/assets/images/icon-service.png" alt="" height="150" width="208">
+                                </div>
+                                <a href="#" class="btn large secondary">ثبت نام GRE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service__slide simple" data-hash="three">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="services__slide--header">ارائه انواع خدمات ارزی</h1>
+                        <div class="col-md-8 col-sm-9">
+                            <div class="content">
+                                <p>
+                                    طراح، معمار، عکاس و یا دارای حرفه خاصی هستید که با
+                                    مشتریان خارج از کشور همکاری دارید؟
+                                    درامد اینترنتی خود را به ریال نقد کنید.
+                                </p>
+                                <a href="#" class="btn"></a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-3">
+                            <img src="public/assets/images/icon-service.png" alt="service">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service__slide content-box" data-hash="four">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="service__card card">
+                                <div class="card__image">
+                                    <img src="public/assets/images/icon-service.png" alt="" height="150" width="208">
+                                </div>
+                                <a href="#" class="btn large secondary">ثبت نام تافل</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="service__card card">
+                                <div class="card__image">
+                                    <img src="public/assets/images/icon-service.png" alt="" height="150" width="208">
+                                </div>
+                                <a href="#" class="btn large secondary">ثبت نام آیلتس</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="service__card card">
+                                <div class="card__image">
+                                    <img src="public/assets/images/icon-service.png" alt="" height="150" width="208">
+                                </div>
+                                <a href="#" class="btn large secondary">ثبت نام GRE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service__slide simple" data-hash="five">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="services__slide--header">ارائه انواع خدمات ارزی</h1>
+                        <div class="col-md-8 col-sm-9">
+                            <div class="content">
+                                <p>
+                                    طراح، معمار، عکاس و یا دارای حرفه خاصی هستید که با
+                                    مشتریان خارج از کشور همکاری دارید؟
+                                    درامد اینترنتی خود را به ریال نقد کنید.
+                                </p>
+                                <a href="#" class="btn"></a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-3">
+                            <img src="public/assets/images/icon-service.png" alt="service">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service__slide simple" data-hash="six">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="services__slide--header">ارائه انواع خدمات ارزی</h1>
+                        <div class="col-md-8 col-sm-9">
+                            <div class="content">
+                                <p>
+                                    طراح، معمار، عکاس و یا دارای حرفه خاصی هستید که با
+                                    مشتریان خارج از کشور همکاری دارید؟
+                                    درامد اینترنتی خود را به ریال نقد کنید.
+                                </p>
+                                <a href="#" class="btn"></a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-3">
+                            <img src="public/assets/images/icon-service.png" alt="service">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- !END Services Slider -->
 </div>
 <!-- !END Site Wrapper -->
 
