navbar responsive and slider navigation btns
- navbar in header responsiveness
- sliders have arrow on bigger screens

--- a/payment/index.html
+++ b/payment/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="negar" lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,8 +42,8 @@
                 <!-- !END Site Logo -->
 
                 <!-- Site Nav -->
-                <nav class="nav pull-right js-hamburger-nav">
-                    <ul class="nav-list list-inline">
+                <nav class="nav pull-right">
+                    <ul class="nav-list list-inline js-hamburger-nav">
 
                         <li class="nav-list__item">
                             <a href="#home">خانه</a>
@@ -71,8 +71,8 @@
                         <li class="nav-list__item">
                             <a class="btn primary" href="#home">عضویت</a>
                         </li>
-                        <li class="nav-list__item">
-                            <a href="#" class="btn primary hamburger">
+                        <li class="nav-list__item nav-list__item--tablet js-hamburger-btn">
+                            <a href="#" class="btn primary">
                                 <i class="fa fa-bars" aria-hidden="true"></i>
                             </a>
                         </li>
