arrow for logo bar and footer
arrow for logobar created
arrow moves on click
footer section created

--- a/payment/index.html
+++ b/payment/index.html
@@ -230,7 +230,7 @@
     <!-- Services Slider -->
     <section class="services">
         <nav class="services-nav">
-            <ul class="list-inline logos-row">
+            <ul class="list-inline logos-row js-logo-select">
                 <li class="logos-row__item">
                     <a href="#one">
                         <div class="logos-row__item--logo">
@@ -280,6 +280,9 @@
                     </a>
                 </li>
             </ul>
+            <div class="nav--arrow">
+
+            </div>
         </nav>
         <div class="services-body owl-carousel" id="service-slider">
             <div class="service__slide simple" data-hash="one">
@@ -430,6 +433,90 @@
         </div>
     </section>
     <!-- !END Services Slider -->
+
+    <!-- Dummy data -->
+        <section class="dummy text-center" style="padding: 80px 0;">
+            <div class="container">
+                <p>این قسمت در دست احداث است.</p>
+            </div>
+        </section>
+    <!-- !END Dummy data -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="footer-address">
+                        <h6 class="footer-address-header">راه های ارتباطی ما</h6>
+                        <p class="footer-address_item">
+                                تهران
+                                جنب بزرگراه رسالت
+
+                                پلاک 1020
+                        </p>
+                        <p class="footer-address_item">
+                            021-22334455
+                        </p>
+                    </div>
+                    <ul class="footer-social list-inline">
+                        <li class="footer-social__items">
+                            <a href="#">
+                                <i class="fa fa-facebook-square"></i>
+                            </a>
+                        </li>
+                        <li class="footer-social__items">
+                            <a href="#">
+                                <i class="fa fa-twitter-square"></i>
+                            </a>
+                        </li>
+                        <li class="footer-social__items">
+                            <a href="#">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-xs-4 xs550">
+                            <nav class="footer-link">
+                                <h6 class="footer-link-header">محصولات</h6>
+                                <a href="#">لینک سایت اول</a>
+                                <a href="#">لینک سایت دوم</a>
+                                <a href="#">لینک سایت سوم</a>
+                            </nav>
+                        </div>
+                        <div class="col-xs-4 xs550">
+                            <nav class="footer-link">
+                                <h6 class="footer-link-header">محصولات</h6>
+                                <a href="#">لینک سایت اول</a>
+                                <a href="#">لینک سایت دوم</a>
+                                <a href="#">لینک سایت سوم</a>
+                            </nav>
+                        </div>
+                        <div class="col-xs-4 xs550">
+                            <nav class="footer-link">
+                                <h6 class="footer-link-header">محصولات</h6>
+                                <a href="#">لینک سایت اول</a>
+                                <a href="#">لینک سایت دوم</a>
+                                <a href="#">لینک سایت سوم</a>
+                                <a href="#">لینک سایت اول</a>
+                                <a href="#">لینک سایت دوم</a>
+                                <a href="#">لینک سایت سوم</a>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <section class="copyright">
+        <div class="container">
+            <p>تمامی حقوق متعلق به <a href="#">گروه یسنا</a> می باشد.</p>
+        </div>
+    </section>
+    <!-- !END Footer -->
 </div>
 <!-- !END Site Wrapper -->
 
