slider logo changer
- active logo shown
- triangle moves to active logo

--- a/payment/index.html
+++ b/payment/index.html
@@ -90,7 +90,7 @@
         <div class="banner-background">
             <img src="public/assets/images/wave.svg" alt="">
         </div>
-        <header class="banner__header">
+        <header class="banner__header banner__header--large">
             <div class="banner__header--slider">
                 <div class="slider-container owl-carousel" id="header-slider">
                     <!-- Center Text only-->
@@ -435,7 +435,7 @@
     <!-- !END Services Slider -->
 
     <!-- Dummy data -->
-        <section class="dummy text-center" style="padding: 80px 0;">
+    <section class="dummy text-center" style="padding: 80px 0;">
             <div class="container">
                 <p>این قسمت در دست احداث است.</p>
             </div>
